# nsm66d

./: ChangeLog  INSTALL  LICENSE.md  NEWS  README.md  RELNOTES  TODO  acts.txt  debugging.txt  meson.build  meson.options  mlsdump.text  work.sh
doc/: README  nsmctl-use-cases.text
doc/draw/: README
doc/latex/: make_pdf.sh
doc/latex/images/: README
doc/latex/tex/: nsm66d-user-guide.tex  references.tex
extras/: README
extras/notes/: JACKPatch.nLWNW.jackpatch  README  add-method-call.text
extras/wraps/: nsm66.wrap
include/: meson.build  nsm66d-config.h.in  nsm66d_version.hpp
include/jackpatch/: jackpatch66.hpp
include/nsmd/: nsm66d.hpp
include/nsmproxy/: nsm-proxy66.hpp
src/: meson.build  nsm66d_version.cpp
src/jackpatch/: jackpatch66.cpp  meson.build
src/nsmctl/: meson.build  nsmctl.cpp
src/nsmd/: meson.build  nsm66d.cpp
src/nsmproxy/: meson.build  nsm-proxy66.cpp
subprojects/: README  libcfg66.wrap  libnsm66.wrap
tests/: meson.build  mlstests.sh  nsmd_test.cpp
tests/data/: README  test.jackpatch
tests/data/2025-03-05/: Data-Storage.nQPEJ  JACKPatch.nLWNW.jackpatch  session.nsm
