#*****************************************************************************
# meson.options (nsm66d)
#-----------------------------------------------------------------------------
##
# \file        meson.options
# \library     nsm66d application
# \author      Chris Ahlstrom
# \date        2025-01-29
# \updates     2025-02-13
# \license     $XPC_SUITE_GPL_LICENSE$
#
#  This file is part of the "nsm66d" application.
#
#  Note that, as of version 1.1, Meson uses "meson.options" in preference to
#  "meson_options.txt".  Hurray!
#
#  Options for nsm66d.
#
#-----------------------------------------------------------------------------

#-----------------------------------------------------------------------------
# This option is checked. nsm66d is an application, not a library
#-----------------------------------------------------------------------------

option('enable-tests',
   type : 'boolean',
   value : true,
   description : 'Build the test program(s)'
)

#-----------------------------------------------------------------------------
# Still working on getting this to work. Actually, for now we prefer
# to use the command "./work.sh --pdf" to make the PDF. That is consistent
# with our other '66' libraries.
#-----------------------------------------------------------------------------

option('enable-docs',
   type : 'boolean',
   value : false,
   description : 'Build the LaTeX documentation.'
   )

#-----------------------------------------------------------------------------
#  We do not need to append version numbers to the documents directory.
#-----------------------------------------------------------------------------

option('docdir',
   type : 'string',
   value : 'share/doc/nsm66d',
   description : 'Directory where Nsm66 documentation is installed.',
   yield : true
)

option('potext',
   type : 'boolean',
   value : false,
   description : 'Build with potext translation support.'
)

#****************************************************************************
# meson.options (nsm66d)
#----------------------------------------------------------------------------
# vim: ts=3 sw=3 ft=meson
#----------------------------------------------------------------------------
